--- a/1st_Core/TODO.txt
+++ b/1st_Core/TODO.txt
@@ -2,10 +2,15 @@ AUG
 M14
 M60 ?
 
-Insurgents
+Afghanen
 Österreich
-Opfor überarbeiten (Leights opfor pack)
+Opfor überarbeiten (Leights opfor pack) ?
 Private Military (random)
+Moderne Afrikaner (AUG)
+Kack Afrikaner (FAL)
+Russkis
 
 ammoschlepper
 SS
+
+classselection namen erweitern
